--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.2.0",
     "reselect": "^5.1.1",
     "sass": "^1.92.1",
+    "shiki": "^3.12.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
